--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -1317,11 +1317,11 @@ official:
  - func: roll(Tensor self, SymInt[1] shifts, int[1] dims=[]) -> Tensor
    impl_ns: acl_op, op_api
  - func: round(Tensor self) -> Tensor
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: round.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: round_(Tensor(a!) self) -> Tensor(a!)
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: round.decimals(Tensor self, *, int decimals) -> Tensor
    impl_ns: acl_op, op_api
  - func: round_.decimals(Tensor(a!) self, *, int decimals) -> Tensor(a!)
@@ -1445,9 +1445,9 @@ official:
  - func: softshrink.out(Tensor self, Scalar lambd=0.5, *, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op, op_api
  - func: softshrink_backward(Tensor grad_output, Tensor self, Scalar lambd) -> Tensor
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: softshrink_backward.grad_input(Tensor grad_output, Tensor self, Scalar lambd, *, Tensor(a!) grad_input) -> Tensor(a!)
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: sort(Tensor self, int dim=-1, bool descending=False) -> (Tensor values, Tensor indices)
    impl_ns: acl_op, op_api
  - func: sort.dimname(Tensor self, Dimname dim, bool descending=False) -> (Tensor values, Tensor indices)
