torch._foreach_mul_算子实现
修改op_plugin/config下v1r11，v2r0，v2r1对应目录下的op_plugin_function.yaml文件，添加foreach_mul算子配置；

添加ops/base_ops/opapi目录下算子实现.cpp文件

--- a/op_plugin/config/v2r0/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r0/op_plugin_functions.yaml
@@ -1724,6 +1724,8 @@ official:
    impl_ns: acl_op
  - func: _symeig_helper(Tensor self, bool eigenvectors, bool upper) -> (Tensor, Tensor)
    impl_ns: acl_op
+ - func: _foreach_mul_.Scalar(Tensor(a!)[] self, Scalar scalar) -> ()
+   impl_ns: op_api
 
 symint:
  - func: embedding(Tensor weight, Tensor indices, SymInt padding_idx=-1, bool scale_grad_by_freq=False, bool sparse=False) -> Tensor
