--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -1782,6 +1782,8 @@ official:
    impl_ns: acl_op, op_api
  - func: selu_(Tensor(a!) self) -> Tensor(a!)
    impl_ns: acl_op, op_api
+ - func: _foreach_mul_.Scalar(Tensor(a!)[] self, Scalar scalar) -> ()
+   impl_ns: op_api
 
 symint:
 
@@ -1804,7 +1806,6 @@ tocpu:
   - _foreach_sub.Scalar
   - _foreach_sub_.Scalar
   - _foreach_mul.Scalar
-  - _foreach_mul_.Scalar
   - _foreach_div.Scalar
   - _foreach_div_.Scalar
   - _foreach_add.List
