--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -1766,6 +1766,12 @@ official:
    impl_ns: op_api
  - func: _foreach_sub_.Scalar(Tensor(a!)[] self, Scalar scalar) -> ()
    impl_ns: op_api
+ - func: _foreach_sub.Scalar(Tensor[] self, Scalar scalar) -> Tensor[]
+   impl_ns: op_api
+ - func: _foreach_div_.Scalar(Tensor(a!)[] self, Scalar scalar) -> ()
+   impl_ns: op_api
+ - func: _foreach_div.Scalar(Tensor[] self, Scalar scalar) -> Tensor[]
+   impl_ns: op_api
  - func: _foreach_add.List(Tensor[] tensors1, Tensor[] tensors2, *, Scalar alpha=1) -> Tensor[]
    impl_ns: op_api
  - func: _foreach_add_.List(Tensor(a!)[] self, Tensor[] other, *, Scalar alpha=1) -> ()
