!542 new foreach_pow_list/scalarlist * new foreach_pow_list/scalarlist & adjust namespace using and comments … merge manually by qxw

--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -1842,6 +1842,14 @@ official:
    impl_ns: op_api
  - func: _foreach_minimum_.List(Tensor(a!)[] self, Tensor[] other) -> ()
    impl_ns: op_api
+ - func: _foreach_pow.List(Tensor[] self, Tensor[] exponent) -> Tensor[]
+   impl_ns: op_api
+ - func: _foreach_pow_.List(Tensor(a!)[] self, Tensor[] exponent) -> ()
+   impl_ns: op_api
+ - func: _foreach_pow.ScalarList(Tensor[] self, Scalar[] exponent) -> Tensor[]
+   impl_ns: op_api
+ - func: _foreach_pow_.ScalarList(Tensor(a!)[] self, Scalar[] exponent) -> ()
+   impl_ns: op_api
 
 symint:
  - func: embedding(Tensor weight, Tensor indices, SymInt padding_idx=-1, bool scale_grad_by_freq=False, bool sparse=False) -> Tensor
