!561 foreach_addcdiv/mul ScalarList operators realization * foreach_addcdiv/mul ScalarList operators realization merge manually by qxw

--- a/op_plugin/config/v2r0/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r0/op_plugin_functions.yaml
@@ -1810,6 +1810,14 @@ official:
    impl_ns: op_api
  - func: _foreach_minimum.List(Tensor[] self, Tensor[] other) -> Tensor[]
    impl_ns: op_api
+ - func: _foreach_addcdiv_.ScalarList(Tensor(a!)[] self, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> ()
+   impl_ns: op_api
+ - func: _foreach_addcdiv.ScalarList(Tensor[] input, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> Tensor[]
+   impl_ns: op_api
+ - func: _foreach_addcmul_.ScalarList(Tensor(a!)[] self, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> ()
+   impl_ns: op_api
+ - func: _foreach_addcmul.ScalarList(Tensor[] input, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> Tensor[]
+   impl_ns: op_api
 
 symint:
  - func: embedding(Tensor weight, Tensor indices, SymInt padding_idx=-1, bool scale_grad_by_freq=False, bool sparse=False) -> Tensor
