--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -1872,6 +1872,15 @@ official:
    impl_ns: op_api
  - func: _foreach_minimum.List(Tensor[] self, Tensor[] other) -> Tensor[]
    impl_ns: op_api
+ - func: _foreach_addcdiv_.ScalarList(Tensor(a!)[] self, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> ()
+   impl_ns: op_api
+ - func: _foreach_addcdiv.ScalarList(Tensor[] input, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> Tensor[]
+   impl_ns: op_api
+ - func: _foreach_addcmul_.ScalarList(Tensor(a!)[] self, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> ()
+   impl_ns: op_api
+ - func: _foreach_addcmul.ScalarList(Tensor[] input, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> Tensor[]
+   impl_ns: op_api
+
 
 symint:
 
@@ -1940,10 +1949,6 @@ tocpu:
   - _foreach_reciprocal
   - _foreach_reciprocal_
   - _foreach_trunc
-  - _foreach_addcdiv_.ScalarList
-  - _foreach_addcmul_.ScalarList
-  - _foreach_addcdiv.ScalarList
-  - _foreach_addcmul.ScalarList
   - _linalg_inv_out_helper_
   - _linalg_qr_helper
   - _logcumsumexp
