--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -1880,14 +1880,7 @@ official:
    impl_ns: op_api
  - func: _foreach_addcmul.ScalarList(Tensor[] input, Tensor[] tensor1, Tensor[] tensor2, Scalar[] scalars) -> Tensor[]
    impl_ns: op_api
- - func: _foreach_exp_(Tensor(a!)[] self) -> ()
-   impl_ns: op_api
- - func: _foreach_exp(Tensor[] tensors) -> Tensor[]
-   impl_ns: op_api
- - func: _foreach_neg(Tensor[] tensors) -> Tensor[]
-   impl_ns: op_api
- - func: _foreach_neg_(Tensor(a!)[] self) -> ()
-   impl_ns: op_api
+
 
 symint:
 
@@ -1905,7 +1898,9 @@ tocpu:
   - _fft_c2r.out
   - _fft_c2c
   - _fft_c2c.out
+  - _foreach_exp
   - _foreach_zero_
+  - _foreach_exp_
   - _foreach_sqrt
   - _foreach_sqrt_
   - _foreach_abs
@@ -1936,6 +1931,8 @@ tocpu:
   - _foreach_log1p_
   - _foreach_log2
   - _foreach_log2_
+  - _foreach_neg
+  - _foreach_neg_
   - _foreach_tan
   - _foreach_tan_
   - _foreach_tanh
