!771 diag hostapi rollback * fixed 4ab3c90 from https://gitee.com/xxiyue/op-plugin/pulls/770

--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -499,9 +499,9 @@ official:
  - func: cumsum.out(Tensor self, int dim, *, ScalarType? dtype=None, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op, op_api
  - func: diag(Tensor self, int diagonal=0) -> Tensor
-   impl_ns: acl_op, op_api
+   impl_ns: acl_op
  - func: diag.out(Tensor self, int diagonal=0, *, Tensor(a!) out) -> Tensor(a!)
-   impl_ns: acl_op, op_api
+   impl_ns: acl_op
  - func: div.Scalar(Tensor self, Scalar other) -> Tensor
    impl_ns: acl_op, op_api
  - func: div.Scalar_mode(Tensor self, Scalar other, *, str? rounding_mode) -> Tensor
