--- a/op_plugin/config/v1r11/derivatives.yaml
+++ b/op_plugin/config/v1r11/derivatives.yaml
@@ -111,5 +111,9 @@
 - name: selu(Tensor self) -> Tensor
   self: selu_backward(grad, result)
 
+- name: npu_rms_norm(Tensor self, Tensor gamma, float epsilon=1e-06) -> (Tensor, Tensor)
+  output_differentiability: [True, False]
+  self, gamma: npu_rms_norm_backward(grad, self, gamma, result1)
+
 - name: binary_cross_entropy_with_logits(Tensor self, Tensor target, Tensor? weight=None, Tensor? pos_weight=None, int reduction=Mean) -> Tensor
   self: npu_binary_cross_entropy_with_logits_backward(grad, self, target, weight, pos_weight, reduction)
