--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -2278,6 +2278,10 @@ custom:
     impl_ns: op_api
   - func: npu_geglu(Tensor self, int dim=-1, int approximate=1) -> (Tensor, Tensor)
     impl_ns: op_api
+  - func: npu_rms_norm(Tensor self, Tensor gamma, float epsilon=1e-06) -> (Tensor, Tensor)
+    impl_ns: acl_op, op_api
+  - func: npu_rms_norm_backward(Tensor dy, Tensor self, Tensor gamma, Tensor rstd) -> (Tensor, Tensor)
+    impl_ns: acl_op, op_api
   - func: npu_geglu_grad(Tensor grad_output, Tensor self, Tensor gelu, int dim=-1, int approximate=1) -> Tensor
     impl_ns: op_api
   - func: npu_dropout_gen_mask(int[] size, float p, *, ScalarType? dtype=None, Layout? layout=None, Device? device=None, bool? pin_memory=None) -> Tensor
