!1774 [Feature] Support conj. * support conj

--- a/op_plugin/config/op_plugin_functions.yaml
+++ b/op_plugin/config/op_plugin_functions.yaml
@@ -104,9 +104,6 @@ official:
   - func: _cdist_forward(Tensor x1, Tensor x2, float p, int? compute_mode) -> Tensor
     acl_op: all_version
 
-  - func: _conj(Tensor(a) self) -> Tensor(a)
-    acl_op: v2.1, v2.2, v2.3, v2.4, v2.5
-
   - func: _convolution(Tensor input, Tensor weight, Tensor? bias, int[] stride, SymInt[] padding, int[] dilation, bool transposed, SymInt[] output_padding, int groups, bool benchmark, bool deterministic, bool cudnn_enabled, bool allow_tf32) -> Tensor
     acl_op: v2.0, v2.1, v2.2, v2.3, v2.4, v2.5
     op_api: v2.1, v2.2, v2.3, v2.4, v2.5
@@ -5865,7 +5862,7 @@ tocpu:
     version: v1.11, v2.0
 unsupported:
   - func: _conj
-    version: v1.11, v2.0
+    version: v2.0
 
   - func: _conj_physical
     version: v1.11, v2.0
@@ -5922,7 +5919,7 @@ unsupported:
     version: v1.11, v2.0
 
   - func: conj
-    version: v1.11, v2.0
+    version: v2.0
 
   - func: conj_physical
     version: v1.11, v2.0
